// 指定版本
syntax = "proto3";

//帧数据
message FrameData {
    int32 frameIndex = 1;
    int32 clientToken = 2;
    string dataType = 3;
    bytes data = 4;
}
//帧数据组
message FrameDataGroup {
    int32 frameIndex = 1;
    repeated FrameData frameData = 2;
}

//帧数据组列表
message FrameDataGroupList {
    repeated FrameDataGroup frameDataGroup = 1;
}

//帧初始化数据
message FrameInitData {
    string mapName = 1;
    int32 frameIndex = 2;
    int64 startTime = 3;
    int64 currentTime = 4;
    repeated FrameDataGroup frameRecord = 5;
}
